<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
	<string name="Submit">Login</string>
	<string name="wl">WELCOME</string>
	<string name="SignUp">New User</string>
	<string name="Name">Name</string>
	<string name="Batch">Batch</string>
	<string name="Department">Department</string>
	<string name="RegisterNo">Register No</string>
	<string name="ConfirmPassword">Confirm  Password</string>
	<string name="Register">Register</string>
	<string name="Select">Select</string>
	<string name="books">Buy/Sell books</string>
	<string name="blog">Department Blogs</string>
	<string name="lib">Explore Library</string>
	<string name="newp">New Post</string>
	<string name="bname">Book Name:</string>
	<string name="author">Author Name:</string>
	<string name="pub">Publication:</string>
	<string name="edi">Edition:</string>
	<string name="desc">Description:</string>
	<string name="cost">Cost:</string>
	<string name="post">Post</string>
	<string name="de">Given by University</string>
	<string name="li">Only 10 digits/characters</string>
	<string name="yr">year</string>
	<string name="sa">Sample</string>
	<string name="view">View Posts</string>
	<string name="search">Search book:</string>
	<string name="sea">Search</string>
	<string name="cs">Computer Science And</string>
	<string name="e">Engineering</string>
	<string-array name="dept_array">
        <item>Computer Science and Engineering</item>
        <item>Information Technology</item>
        <item>Electronics and Communication Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Civil Engineering</item>
    </string-array>
    <string-array name="sub_array">
        <item>Transforms and Partial Differential Equations </item>
        <item>Data Structures</item>
        <item>Object Oriented Programming</item>
        <item>Probability and Queueing Theory</item>
        <item>Design and Analysis of Algorithms</item>
        <item>Database Management Systems </item>
        <item>Engineering Economics and Financial Accounting</item>
        <item>Computer Graphics </item>
        <item>Mobile and Pervasive Computing </item>
        <item>Digital Signal Processing </item>
    </string-array>
	
	<string name="Hint">Hint</string>
</resources>
