<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg"
    android:fadingEdge="none"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kite.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/ename"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentRight="true"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ebatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/batch"
        android:layout_alignBottom="@+id/batch"
        android:layout_alignLeft="@+id/ename"
        android:ems="10"
         android:digits="0123456789"
        android:maxLength="4"
        android:inputType="numberDecimal"
        android:hint="@string/yr" />

    <TextView
        android:id="@+id/cpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pwd"
        android:layout_below="@+id/pwd"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/ebatch"
        android:text="@string/ConfirmPassword"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <EditText
        android:id="@+id/epwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pwd"
        android:layout_alignBottom="@+id/pwd"
        android:layout_toRightOf="@+id/cpwd"
        android:ems="10"
        android:maxLength="10"
        android:inputType="textPassword" 
        android:hint="@string/li"/>

    <EditText
        android:id="@+id/ecpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cpwd"
        android:layout_toRightOf="@+id/dept"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/eregno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/regno"
        android:layout_alignBottom="@+id/regno"
        android:layout_alignLeft="@+id/ename"
        android:maxLength="12"
        android:ems="10"
        android:hint="@string/de"
        android:inputType="text" />

    <Spinner
        android:id="@+id/sdept"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/reg"
        android:layout_below="@+id/ebatch"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:entries="@array/dept_array"
        android:prompt="@string/Select" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpwd"
        android:layout_alignRight="@+id/batch"
        android:layout_below="@+id/ecpwd"
        android:layout_marginTop="28dp"
        android:text="@string/Hint"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dept"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/Name"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/regno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pwd"
        android:layout_below="@+id/ename"
        android:layout_marginTop="16dp"
        android:text="@string/RegisterNo"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dept"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/ehint"
        android:text="@string/Password"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/name"
        android:layout_below="@+id/eregno"
        android:layout_marginTop="16dp"
        android:text="@string/Batch"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sdept"
        android:layout_toLeftOf="@+id/ebatch"
        android:text="@string/Department"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/reg"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_below="@+id/hint"
        android:layout_centerHorizontal="true"
        android:background="#202020"
        android:fadingEdge="horizontal|vertical"
        android:text="@string/Register"
        android:textColor="#fff"
        android:typeface="serif" />

    <EditText
        android:id="@+id/ehint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hint"
        android:layout_alignRight="@+id/ecpwd"
        android:ems="10"
        android:inputType="text" />

</RelativeLayout>