
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/purple"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kite.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/bname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/bname"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Spinner
        android:id="@+id/sbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bname"
        android:layout_below="@+id/bname"
        android:prompt="@string/Select"
        android:spinnerMode="dropdown"
        android:entries="@array/sub_array" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sbook"
        android:layout_below="@+id/sbook"
        android:text="@string/author"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <EditText
        android:id="@+id/eauthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/author"
        android:layout_alignBottom="@+id/author"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/author"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/pub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/author"
        android:layout_below="@+id/eauthor"
        android:layout_marginTop="24dp"
        android:text="@string/pub"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <EditText
        android:id="@+id/epub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pub"
        android:layout_alignBottom="@+id/pub"
        android:layout_alignLeft="@+id/eauthor"
        android:ems="10" 
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/edi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pub"
        android:layout_below="@+id/epub"
        android:layout_marginTop="24dp"
        android:text="@string/edi"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <EditText
        android:id="@+id/eedi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edi"
        android:layout_alignBottom="@+id/edi"
        android:layout_toRightOf="@+id/author"
        android:ems="10"
        android:inputType="text" />

    <TextView
       android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edi"
        android:layout_below="@+id/eedi"
        android:layout_marginTop="26dp"
        android:text="@string/cost"
        android:textStyle="bold|italic"
        android:typeface="serif"  />

    <EditText
        android:id="@+id/ecost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cost"
        android:layout_alignBottom="@+id/cost"
        android:layout_alignLeft="@+id/eedi"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ecost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/post"
        android:textStyle="bold|italic"
        android:typeface="serif" />

</RelativeLayout>
